tests/snapshots/art_table_metric_d3_w60.snap
---
source: tests/render_snapshots.rs
expression: "render(case(\"beijing-3d-day.json\", UnitSystem::Metric, 60))"
---
Weather report: Beijing, Beijing, China (39.90, 116.41)

   \│/  Partly cloudy
 ╭───╮  +22°C (+24°C)
(     ) ↗ 12km/h NE
 ╰───╯  56% 1013hPa 10km 0.0mm

┌────────────────────┬────────────────────┐
│ Today, Sep 30      │ Thu 01 Oct         │
├────────────────────┼────────────────────┤
│    \│/  Morning    │    \│/  Morning    │
│   ─(●)─ +18°C      │  ╭───╮  +17°C      │
│    /│\  → 8.0km/h  │ (     ) → 9.0km/h  │
│         0.0mm 60%  │  ╰───╯  0.2mm 65%  │
├────────────────────┼────────────────────┤
│    \│/  Noon       │  ╭───╮  Noon       │
│   ─(●)─ +24°C      │ ╭╯   ╰╮ +21°C      │
│    /│\  ↘ 14km/h   │ (     ) → 15km/h   │
│    ▁▁▁  0.0mm 45%  │ ╰─────╯ 1.2mm 70%  │
├────────────────────┼────────────────────┤
│    \│/  Evening    │  ╭───╮  Evening    │
│  ╭───╮  +20°C      │ (     ) +18°C      │
│ (     ) ↓ 10km/h   │  ╰───╯  ↘ 18km/h   │
│  ╰───╯  0.0mm 55%  │    /    4.5mm 85%  │
├────────────────────┼────────────────────┤
│   · * · Night      │  ╭───╮  Night      │
│    (●)  +15°C      │ (     ) +16°C      │
│   * · * ↓ 6.0km/h  │  ╰───╯  ↘ 20km/h   │
│         0.0mm 70%  │   / /   6.0mm 90%  │
└────────────────────┴────────────────────┘

┌────────────────────┐
│ Fri 02 Oct         │
├────────────────────┤
│  ╭───╮  Morning    │
│ ╭╯   ╰╮ +14°C      │
│ (     ) → 7.0km/h  │
│ ╰─────╯ 0.0mm 75%  │
├────────────────────┤
│  ─────  Noon       │
│   ───── +19°C      │
│  ─────  ↗ 10km/h   │
│         0.0mm 70%  │
├────────────────────┤
│    \│/  Evening    │
│  ╭───╮  +16°C      │
│ (     ) ↗ 8.0km/h  │
│  ╰───╯  0.0mm 72%  │
├────────────────────┤
│   · * · Night      │
│    (●)  +12°C      │
│   * · * ↗ 5.0km/h  │
│         0.0mm 78%  │
└────────────────────┘

Location data based on GeoNames (CC-BY-4.0) via Open-Meteo …
Data: Open-Meteo.com (CC BY 4.0)
