tests/snapshots/art_table_metric_d3_w80.snap
---
source: tests/render_snapshots.rs
expression: "render(case(\"beijing-3d-day.json\", UnitSystem::Metric, 80))"
---
Weather report: Beijing, Beijing, China (39.90, 116.41)

   \│/  Partly cloudy
 ╭───╮  +22°C (+24°C)
(     ) ↗ 12km/h NE
 ╰───╯  56% 1013hPa 10km 0.0mm

┌───────────────────────┬───────────────────────┬───────────────────────┐
│ Today, Sep 30         │ Thu 01 Oct            │ Fri 02 Oct            │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Morning       │    \│/  Morning       │  ╭───╮  Morning       │
│   ─(●)─ +18°C (+17°C) │  ╭───╮  +17°C (+16°C) │ ╭╯   ╰╮ +14°C (+13°C) │
│    /│\  → 8.0km/h E   │ (     ) → 9.0km/h E   │ (     ) → 7.0km/h ENE │
│         0.0mm 60%     │  ╰───╯  0.2mm 65%     │ ╰─────╯ 0.0mm 75%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Noon          │  ╭───╮  Noon          │  ─────  Noon          │
│   ─(●)─ +24°C (+25°C) │ ╭╯   ╰╮ +21°C (+21°C) │   ───── +19°C (+19°C) │
│    /│\  ↘ 14km/h ESE  │ (     ) → 15km/h ESE  │  ─────  ↗ 10km/h ENE  │
│    ▁▁▁  0.0mm 45%     │ ╰─────╯ 1.2mm 70%     │         0.0mm 70%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Evening       │  ╭───╮  Evening       │    \│/  Evening       │
│  ╭───╮  +20°C (+20°C) │ (     ) +18°C (+17°C) │  ╭───╮  +16°C (+15°C) │
│ (     ) ↓ 10km/h SSE  │  ╰───╯  ↘ 18km/h SE   │ (     ) ↗ 8.0km/h NE  │
│  ╰───╯  0.0mm 55%     │    /    4.5mm 85%     │  ╰───╯  0.0mm 72%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│   · * · Night         │  ╭───╮  Night         │   · * · Night         │
│    (●)  +15°C (+14°C) │ (     ) +16°C (+15°C) │    (●)  +12°C (+11°C) │
│   * · * ↓ 6.0km/h SSW │  ╰───╯  ↘ 20km/h SSE  │   * · * ↗ 5.0km/h NE  │
│         0.0mm 70%     │   / /   6.0mm 90%     │         0.0mm 78%     │
└───────────────────────┴───────────────────────┴───────────────────────┘

Location data based on GeoNames (CC-BY-4.0) via Open-Meteo — https://open-meteo…
Data: Open-Meteo.com (CC BY 4.0)
