tests/snapshots/art_table_metric_d7_w80.snap
---
source: tests/render_snapshots.rs
expression: "render(case(\"beijing-7d.json\", UnitSystem::Metric, 80))"
---
Weather report: Beijing, Beijing, China (39.90, 116.41)

   \│/  Partly cloudy
 ╭───╮  +20°C (+21°C)
(     ) ↗ 13km/h NE
 ╰───╯  58% 1012hPa 11km 0.0mm

┌───────────────────────┬───────────────────────┬───────────────────────┐
│ Today, Sep 30         │ Thu 01 Oct            │ Fri 02 Oct            │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Morning       │  ╭───╮  Morning       │  ─────  Morning       │
│   ─(●)─ +18°C (+18°C) │ ╭╯   ╰╮ +17°C (+16°C) │   ───── +12°C (+11°C) │
│    /│\  → 8.0km/h E   │ (     ) → 9.0km/h E   │  ─────  → 7.0km/h ENE │
│         0.0mm 10%     │ ╰─────╯ 0.4mm 45%     │         0.0mm 20%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Noon          │  ╭───╮  Noon          │    \│/  Noon          │
│   ─(●)─ +24°C (+25°C) │ (     ) +20°C (+20°C) │  ╭───╮  +18°C (+18°C) │
│    /│\  ↘ 13km/h ESE  │  ╰───╯  → 14km/h ESE  │ (     ) ↗ 9.0km/h ENE │
│    ▁▁▁  0.0mm 5%      │    /    2.0mm 65%     │  ╰───╯  0.0mm 15%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Evening       │  ╭───╮  Evening       │    \│/  Evening       │
│  ╭───╮  +21°C (+21°C) │ (     ) +18°C (+17°C) │   ─(●)─ +15°C (+14°C) │
│ (     ) ↘ 10km/h SSE  │  ╰───╯  ↘ 17km/h SE   │    /│\  ↗ 8.0km/h NE  │
│  ╰───╯  0.0mm 10%     │   / /   3.5mm 75%     │    ▁▁▁  0.0mm 10%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│   · * · Night         │  ╭───╮  Night         │   · * · Night         │
│    (●)  +16°C (+15°C) │ (     ) +16°C (+15°C) │    (●)  +11°C (+10°C) │
│   * · * ↓ 6.0km/h SSW │  ╰───╯  ↘ 12km/h SSE  │   * · * ↗ 5.0km/h NE  │
│         0.0mm 5%      │    .    1.5mm 60%     │         0.0mm 5%      │
└───────────────────────┴───────────────────────┴───────────────────────┘

┌───────────────────────┬───────────────────────┬───────────────────────┐
│ Sat 03 Oct            │ Sun 04 Oct            │ Mon 05 Oct            │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Morning       │  ╭───╮  Morning       │  ─────  Morning       │
│   ─(●)─ +10°C (+9°C)  │ ╭╯   ╰╮ +9°C (+8°C)   │   ───── +7°C (+6°C)   │
│    /│\  → 6.0km/h E   │ (     ) ↖ 10km/h WNW  │  ─────  ↑ 9.0km/h NNE │
│    ▁▁▁  0.0mm 15%     │ ╰─────╯ 0.0mm 25%     │         0.0mm 20%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Noon          │  ╭───╮  Noon          │    \│/  Noon          │
│  ╭───╮  +17°C (+17°C) │ (     ) +15°C (+14°C) │  ╭───╮  +13°C (+12°C) │
│ (     ) ↘ 11km/h SE   │  ╰───╯  ↖ 16km/h NW   │ (     ) ↗ 12km/h NE   │
│  ╰───╯  0.0mm 10%     │    .    0.2mm 50%     │  ╰───╯  0.0mm 15%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Evening       │  ╭───╮  Evening       │    \│/  Evening       │
│  ╭───╮  +14°C (+13°C) │ (     ) +12°C (+11°C) │   ─(●)─ +10°C (+9°C)  │
│ (     ) ↓ 9.0km/h SSE │  ╰───╯  ↖ 18km/h NNW  │    /│\  ↗ 8.0km/h ENE │
│  ╰───╯  0.0mm 10%     │    /    1.0mm 60%     │         0.0mm 10%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│  ╭───╮  Night         │  ╭───╮  Night         │   · * · Night         │
│ ╭╯   ╰╮ +9°C (+8°C)   │ (     ) +8°C (+7°C)   │    (●)  +6°C (+5°C)   │
│ (     ) ↓ 7.0km/h SSW │  ╰───╯  ↑ 14km/h NNW  │   * · * → 6.0km/h E   │
│ ╰─────╯ 0.0mm 5%      │   . .   0.6mm 55%     │         0.0mm 5%      │
└───────────────────────┴───────────────────────┴───────────────────────┘

┌───────────────────────┐
│ Tue 06 Oct            │
├───────────────────────┤
│  ╭───╮  Morning       │
│ ╭╯   ╰╮ +6°C (+4°C)   │
│ (     ) ↑ 11km/h N    │
│ ╰─────╯ 0.0mm 30%     │
├───────────────────────┤
│    \│/  Noon          │
│  ╭───╮  +12°C (+11°C) │
│ (     ) ↗ 17km/h NNE  │
│    /    0.8mm 55%     │
├───────────────────────┤
│    \│/  Evening       │
│  ╭───╮  +9°C (+8°C)   │
│ (     ) ↗ 19km/h NE   │
│   / /   1.5mm 65%     │
├───────────────────────┤
│  ╭───╮  Night         │
│ (     ) +5°C (+4°C)   │
│  ╰───╯  ↗ 13km/h NE   │
│    .    0.4mm 50%     │
└───────────────────────┘

Location data based on GeoNames (CC-BY-4.0) via Open-Meteo — https://open-meteo…
Data: Open-Meteo.com (CC BY 4.0)
