tests/snapshots/art_table_moon_dumb_d1_w80.snap
---
source: tests/render_snapshots.rs
expression: "render(Case\n{\n    format: Format::Dumb, ..case(\"beijing-astro.json\", UnitSystem::Metric, 80)\n})"
---
Weather report: Beijing, Beijing, China (39.90, 116.41)

   \|/  Mainly clear
  -(o)- +22C (+22C)
   /|\  / 10km/h NNE
   ___  52% 1015hPa 14km 0.0mm

+-----------------------+
| Today, Sep 30         |
+-----------------------+
|    \|/  Morning       |
|   -(o)- +17C (+16C)   |
|    /|\  > 7.0km/h E   |
|         0.0mm 10%     |
+-----------------------+
|    \|/  Noon          |
|   -(o)- +23C (+24C)   |
|    /|\  \ 12km/h SE   |
|    ___  0.0mm 5%      |
+-----------------------+
|    \|/  Evening       |
|  .---.  +19C (+19C)   |
| (     ) v 9.0km/h S   |
|  '---'  0.0mm 10%     |
+-----------------------+
|  .---.  Night         |
| /.   .\ +14C (+13C)   |
| (     ) , 6.0km/h SSW |
| '-----' 0.0mm 5%      |
+-----------------------+

 #+     Moon: Waning Crescent
#+..    23% illuminated (geocentric) . age 26.5 d
#+..    Moonrise 07:12 . Moonset 21:34
 #+     Sunrise 06:05 . Sunset 18:55 . daylight 12h 00m

Location data based on GeoNames (CC-BY-4.0) via Open-Meteo -- https://open-me...
Data: Open-Meteo.com (CC BY 4.0) -- https://open-meteo.com/
