tests/snapshots/art_table_night_d2_w80.snap
---
source: tests/render_snapshots.rs
expression: "render(case(\"beijing-night.json\", UnitSystem::Metric, 80))"
---
Weather report: Beijing, Beijing, China (39.90, 116.41)

  · * · Clear sky
   (●)  +14°C (+13°C)
  * · * ↖ 6.0km/h WNW
        72% 1018hPa 10km 0.0mm

┌───────────────────────┬───────────────────────┐
│ Today, Sep 30         │ Thu 01 Oct            │
├───────────────────────┼───────────────────────┤
│    \│/  Morning       │    \│/  Morning       │
│   ─(●)─ +16°C (+15°C) │   ─(●)─ +15°C (+14°C) │
│    /│\  ← 6.0km/h W   │    /│\  ← 6.0km/h WNW │
│    ▁▁▁  0.0mm 5%      │    ▁▁▁  0.0mm 5%      │
├───────────────────────┼───────────────────────┤
│    \│/  Noon          │    \│/  Noon          │
│  ╭───╮  +22°C (+22°C) │  ╭───╮  +21°C (+21°C) │
│ (     ) ↖ 10km/h WNW  │ (     ) ↖ 9.0km/h WNW │
│  ╰───╯  0.0mm 5%      │  ╰───╯  0.0mm 5%      │
├───────────────────────┼───────────────────────┤
│  ╭───╮  Evening       │    \│/  Evening       │
│ ╭╯   ╰╮ +18°C (+17°C) │  ╭───╮  +17°C (+16°C) │
│ (     ) ↖ 8.0km/h NW  │ (     ) ↖ 7.0km/h NW  │
│ ╰─────╯ 0.0mm 10%     │  ╰───╯  0.0mm 10%     │
├───────────────────────┼───────────────────────┤
│   · * · Night         │   * · * Night         │
│    (●)  +14°C (+13°C) │  ╭───╮  +13°C (+12°C) │
│   * · * ↖ 5.0km/h WNW │ (     ) ↖ 5.0km/h WNW │
│         0.0mm 5%      │  ╰───╯  0.0mm 5%      │
└───────────────────────┴───────────────────────┘

Location data based on GeoNames (CC-BY-4.0) via Open-Meteo — https://open-meteo…
Data: Open-Meteo.com (CC BY 4.0)
