tests/snapshots/art_table_us_d3_w40.snap
---
source: tests/render_snapshots.rs
expression: "render(case(\"beijing-3d-day.json\", UnitSystem::Us, 40))"
---
Weather report: Beijing, Beijing, China…

   \│/  Partly cloudy
 ╭───╮  +72°F (+74°F)
(     ) ↗ 7.5mph NE
 ╰───╯  56% 29.91inHg 6.2mi 0.00in

Today, Sep 30
  Morning │ +64°F │ → 5.0mph │ 0.00in
  Noon    │ +75°F │ ↘ 8.7mph │ 0.00in
  Evening │ +68°F │ ↓ 6.2mph │ 0.00in
  Night   │ +59°F │ ↓ 3.7mph │ 0.00in

Thu 01 Oct
  Morning │ +63°F │ → 5.6mph │ 0.01in
  Noon    │ +70°F │ → 9.3mph │ 0.05in
  Evening │ +64°F │ ↘ 11mph │ 0.18in
  Night   │ +61°F │ ↘ 12mph │ 0.24in

Fri 02 Oct
  Morning │ +57°F │ → 4.3mph │ 0.00in
  Noon    │ +66°F │ ↗ 6.2mph │ 0.00in
  Evening │ +61°F │ ↗ 5.0mph │ 0.00in
  Night   │ +54°F │ ↗ 3.1mph │ 0.00in

Location data based on GeoNames (CC-BY-…
Data: Open-Meteo.com (CC BY 4.0)
